--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
             <p>Essa é versão 1.0 do Site</p>
         </aside>
     </main>
-    <footer>Projeto criado por <a href="https://github.com/IgorLohanX" target="_blank"><abbr title="Ir para minha página do Github">Igor Lohan</abbr></a></footer>
+    <footer><p>Projeto criado por <a href="https://github.com/IgorLohanX" target="_blank"><abbr title="Ir para minha página do Github">Igor Lohan</abbr></a></p></footer>
 </body>
 </html>
