--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </ul>
         </section>
         <aside>
-            <p>Essa é versão 1.0 do Site</p>
+            <p>Esta é a versão 1.0 do Site</p>
         </aside>
     </main>
     <footer><p>Projeto criado por <a href="https://github.com/IgorLohanX" target="_blank"><abbr title="Ir para minha página do Github">Igor Lohan</abbr></a></p></footer>
