--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     <main>
         <article id="bdo">
-            <h1>Videos de BDO</h1>
+            <h1>Vídeos de BDO</h1>
             <div class="video">
                 <iframe id="video1" width="560" height="315" src="https://www.youtube.com/embed/yA9-w4yu3jU?si=H3oBGIwsR1nWX20X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -36,7 +36,7 @@
             
         </article>
         <section class="imagem">
-            <h2 class="gradient">Alguns links de videos de BDO (Em Breve)</h2>
+            <h2 class="gradient">Alguns links de vídeos de BDO (Em Breve)</h2>
             <ul>
                 <li><a href="#" target="_self">****1****</a></li>
                 <li><a href="#" target="_self">****2****</a></li>
@@ -53,7 +53,7 @@
             </ul>
         </section>
         <article id="warframe">
-            <h1>Videos de Warframe</h1>
+            <h1>Vídeos de Warframe</h1>
             <div class="video">
                 
                 <iframe id="video5" width="560" height="315" src="https://www.youtube.com/embed/Fu07UusgKAA?si=GoOlfYMTqCMjRjX-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -72,7 +72,7 @@
             </div>
         </article>
         <section class="imagem" id="imagem2">
-            <h2 class="gradient">Alguns links de videos de Warframe</h2>
+            <h2 class="gradient">Alguns links de vídeos de Warframe</h2>
             <ul>
                 <li><a href="https://youtube.com/shorts/72cKg6lSIp4?si=q1I2yhejypkAnSH4" target="_blank">AC/DC - T.N.T.</a></li>
                 <li><a href="https://youtube.com/shorts/n1EUNt7g2EE?si=NCgqp-fSdjGLnq9I" target="_blank">Black Eyed Peas - Where Is The Love</a></li>
